[package]
name = "password-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.98"
argon2 = "0.5.3"
base64 = "0.22.1"
clap = { version = "4.5.39", features = ["derive"] }
directories-next = "2.0.0"
rand = "0.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
